# Birthday-Wisher

./: Cargo.toml  body.txt
migrations/: 20231224153107_friend.down.sql  20231224153107_friend.up.sql  20240110162337_user.down.sql  20240110162337_user.up.sql  20240124103511_otp.down.sql  20240124103511_otp.up.sql
src/: command.rs  main.rs  runner.rs  schema.rs  utils.rs
src/helper/: db_connection.rs  mod.rs  utils.rs
src/schema/: api.rs  friend.rs  mod.rs  otps.rs  user.rs
src/server/: app.rs  error.rs  friend_route.rs  handler.rs  mod.rs  public_route.rs
templates/: index.html  otp.html
